syntax = "proto3";
package axelar.snapshot.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/snapshot/types";

import "gogoproto/gogo.proto";
import "axelar/snapshot/v1beta1/params.proto";

option (gogoproto.goproto_getters_all) = false;

message QueryValidatorsResponse {
  message TssIllegibilityInfo {
    bool tombstoned = 1;
    bool jailed = 2;
    bool missed_too_many_blocks = 3;
    bool no_proxy_registered = 4;
    bool tss_suspended = 5;
    bool proxy_insuficient_funds = 6;
    bool stale_tss_heartbeat = 7;
  }

  message Validator {
    string operator_address = 1;
    string moniker = 2;
    TssIllegibilityInfo tss_illegibility_info = 3
        [ (gogoproto.nullable) = false ];
  }

  repeated Validator validators = 1;
}

// ParamsRequest represents a message that queries the params
message ParamsRequest {}

message ParamsResponse { Params params = 1 [ (gogoproto.nullable) = false ]; }

// OperatorByProxyRequest retrieves the operator address associated with a given
// proxy address
message OperatorByProxyRequest { string proxy_address = 1; }
message OperatorByProxyResponse { string operator_address = 1; }

// ProxyByOperatorRequest retrieves the proxy address associated with a given
// operator address
message ProxyByOperatorRequest { string operator_address = 1; }

message ProxyByOperatorResponse {
  enum Status {
    option (gogoproto.goproto_enum_prefix) = false;
    STATUS_UNSPECIFIED = 0 [ (gogoproto.enumvalue_customname) = "Unspecified" ];
    STATUS_ACTIVE = 1 [ (gogoproto.enumvalue_customname) = "Active" ];
    STATUS_INACTIVE = 2 [ (gogoproto.enumvalue_customname) = "Inactive" ];
  }
  string proxy_address = 1;
  Status status = 2;
}
